fix: improve links contrast

--- a/wasp.css
+++ b/wasp.css
@@ -15,8 +15,8 @@
 	--heading-font-weight: bold;
 	--heading-font-style: normal;
 	--heading-letter-spacing: 0.025em;
-	--anchor-font-color: var(--color-tertiary-600);
-	--anchor-font-color-dark: var(--color-primary-400);
+	--anchor-font-color: var(--color-tertiary-700);
+	--anchor-font-color-dark: var(--color-primary-300);
 	--anchor-font-family: inherit;
 	--anchor-font-size: inherit;
 	--anchor-line-height: inherit;
